[gd_scene load_steps=5 format=2]

[ext_resource path="res://objects/game/scrUI.gd" type="Script" id=1]
[ext_resource path="res://fonts/FontVerdanaSmall.tres" type="DynamicFont" id=2]
[ext_resource path="res://other/DefaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://objects/title/Settings.tscn" type="PackedScene" id=4]

[node name="UI" type="CanvasLayer"]
pause_mode = 2
layer = 4
script = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox1" type="VBoxContainer" parent="Margin"]
margin_right = 374.0
margin_bottom = 206.0

[node name="LavaStatLabel" type="Label" parent="Margin/VBox1"]
margin_right = 374.0
margin_bottom = 12.0

[node name="RoundTimeLabel" type="Label" parent="Margin/VBox1"]
margin_top = 16.0
margin_right = 374.0
margin_bottom = 28.0

[node name="LavaNumberLabel" type="Label" parent="Margin/VBox1"]
margin_top = 32.0
margin_right = 374.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 2 )

[node name="FPSLabel" type="Label" parent="Margin/VBox1"]
margin_top = 48.0
margin_right = 374.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 2 )

[node name="P1HPLabel" type="Label" parent="Margin/VBox1"]
margin_top = 64.0
margin_right = 374.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 2 )

[node name="WhatIsLabel" type="Label" parent="Margin/VBox1"]
margin_top = 80.0
margin_right = 374.0
margin_bottom = 92.0

[node name="BlockIDLabel" type="Label" parent="Margin/VBox1"]
margin_top = 96.0
margin_right = 374.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 2 )

[node name="DeathMenu" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="DeathMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0
margin_top = -52.0
margin_right = 81.0
margin_bottom = 52.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text1" type="VBoxContainer" parent="DeathMenu/Content"]
margin_top = 6.0
margin_right = 162.0
margin_bottom = 34.0

[node name="PausedText" type="Label" parent="DeathMenu/Content/Text1"]
margin_right = 162.0
margin_bottom = 12.0
text = "Game Over"
align = 1
valign = 3

[node name="Score" type="Label" parent="DeathMenu/Content/Text1"]
margin_top = 16.0
margin_right = 162.0
margin_bottom = 28.0
text = "Score: 0"
align = 1

[node name="Buttons" type="HBoxContainer" parent="DeathMenu/Content"]
margin_top = 50.0
margin_right = 162.0
margin_bottom = 70.0
size_flags_horizontal = 15
size_flags_vertical = 14
size_flags_stretch_ratio = 0.0
alignment = 2

[node name="Retry" type="Button" parent="DeathMenu/Content/Buttons"]
margin_right = 94.0
margin_bottom = 20.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "Try Again"

[node name="Title" type="Button" parent="DeathMenu/Content/Buttons"]
margin_left = 98.0
margin_right = 162.0
margin_bottom = 20.0
theme = ExtResource( 3 )
text = "Go to Title"

[node name="Reason" type="Label" parent="DeathMenu/Content"]
margin_top = 86.0
margin_right = 162.0
margin_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
text = "Too bad you fool"
align = 1

[node name="PauseMenu" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Content" type="VBoxContainer" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.0
margin_top = -38.5
margin_right = 81.0
margin_bottom = 38.5
alignment = 1

[node name="PausedText" type="Label" parent="PauseMenu/Content"]
margin_right = 162.0
margin_bottom = 12.0
text = "Game is Paused"
align = 1
valign = 3

[node name="Score" type="Label" parent="PauseMenu/Content"]
margin_top = 16.0
margin_right = 162.0
margin_bottom = 28.0
align = 1

[node name="VBox" type="VBoxContainer" parent="PauseMenu/Content"]
margin_top = 32.0
margin_right = 162.0
margin_bottom = 76.0

[node name="Buttons" type="HBoxContainer" parent="PauseMenu/Content/VBox"]
margin_right = 162.0
margin_bottom = 20.0
size_flags_horizontal = 15
size_flags_vertical = 14
size_flags_stretch_ratio = 0.0
alignment = 2

[node name="Resume" type="Button" parent="PauseMenu/Content/VBox/Buttons"]
margin_right = 94.0
margin_bottom = 20.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "Resume"

[node name="Title" type="Button" parent="PauseMenu/Content/VBox/Buttons"]
margin_left = 98.0
margin_right = 162.0
margin_bottom = 20.0
theme = ExtResource( 3 )
text = "Go to Title"

[node name="Settings" type="Button" parent="PauseMenu/Content/VBox"]
margin_top = 24.0
margin_right = 162.0
margin_bottom = 44.0
theme = ExtResource( 3 )
text = "Settings"

[node name="LineEdit" type="LineEdit" parent="PauseMenu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -27.0
margin_right = 151.0
margin_bottom = -5.0
theme = ExtResource( 3 )
placeholder_text = "Command"

[node name="Settings" parent="PauseMenu" instance=ExtResource( 4 )]
visible = false
[connection signal="visibility_changed" from="DeathMenu" to="." method="_on_DeathMenu_visibility_changed"]
[connection signal="button_up" from="DeathMenu/Content/Buttons/Retry" to="." method="_on_Retry_button_up"]
[connection signal="button_up" from="DeathMenu/Content/Buttons/Title" to="." method="_on_Title_button_up"]
[connection signal="visibility_changed" from="PauseMenu" to="." method="_on_PauseMenu_visibility_changed"]
[connection signal="button_up" from="PauseMenu/Content/VBox/Buttons/Resume" to="." method="_on_Resume_button_up"]
[connection signal="button_up" from="PauseMenu/Content/VBox/Buttons/Title" to="." method="_on_Title_button_up"]
[connection signal="button_up" from="PauseMenu/Content/VBox/Settings" to="." method="_on_Settings_button_up"]
[connection signal="text_entered" from="PauseMenu/LineEdit" to="." method="_on_LineEdit_text_entered"]
